kubernetes/base/networkpolicies/allow-egress-data.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-egress-required
  namespace: mis-prod
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - backend
          - celery-worker
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 10.20.128.0/20
        - ipBlock:
            cidr: 10.20.144.0/20
        - ipBlock:
            cidr: 10.20.160.0/20
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 6379
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
      ports:
        - protocol: TCP
          port: 4317
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
